redid tags html to fix align problems

--- a/links/static/css/links_style.css
+++ b/links/static/css/links_style.css
@@ -59,14 +59,15 @@ body {
 /* Tags */
 
 #tags {
-    opacity: 0.75;
+    opacity: 0.9;
 }
 
-ul#tag-list {
+#tag-list {
     list-style: none;
     text-align: right;
     font-size: 0.7em;
-    margin: 0 49px 0 0;
+    margin: 0 39px 0 0;
+    float: right;
 }
 
 .tag-container {
@@ -83,10 +84,9 @@ li.tag {
 }
 
 .tag-count {
-    color: #9CC1FF;
-    font-size: 0.5em;
+    font-size: 0.95em;
     position: relative;
-    float: right;
+    text-align: left;
     left: 4px;
     top: 2px;
     font-family: Consolas, Cabin;
@@ -106,6 +106,10 @@ li.tag {
 
 span.tags-double-slash {
     margin: 0 0.9em 0 0.9em;
+}
+
+#tag-list td {
+    padding: 0 0 5px 0;
 }
 
 /* Sort Menu */
